src/test/ui/single-use-lifetime/one-use-in-fn-argument-in-band.stderr
error: lifetime parameter `'b` only used once
  --> $DIR/one-use-in-fn-argument-in-band.rs:19:22
   |
LL | fn a(x: &'a u32, y: &'b u32) {
   |                      ^^
   |                      |
   |                      this lifetime...
   |                      ...is used only here
   |
note: lint level defined here
  --> $DIR/one-use-in-fn-argument-in-band.rs:12:9
   |
LL | #![deny(single_use_lifetimes)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: lifetime parameter `'a` only used once
  --> $DIR/one-use-in-fn-argument-in-band.rs:19:10
   |
LL | fn a(x: &'a u32, y: &'b u32) {
   |          ^^
   |          |
   |          this lifetime...
   |          ...is used only here

error: aborting due to 2 previous errors

